--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
   font-weight: 400;
   src: local("Rambla"), local("Rambla-Regular"), url(../fonts/rambla.woff) format("woff"); }
 
+body{
+  background-color: #8897B7;
+}
+
 #wrapper{
 	margin-top: 30px;
 	background-color: white;
