--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body{
   padding-top: 1em;
   padding-bottom: 1em;
   text-align: center;
-  background-color: #58a558;
+  background-color: #019d6e;
   color: #292929;
 }
 
@@ -25,7 +25,7 @@ body{
 }
 
 #content a {
-  color: green;
+  color: #019d6e;
   text-decoration: none;
 }
 
