--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
 
 #content{
   margin: 0 auto;
+  padding: 50px;
   max-width: 50em;
 
   line-height: 1.5;
@@ -53,6 +54,6 @@ h1{
 }
 
 img {
-    max-width: 50em;
-
+  width: calc(100vw - 100px);
+  max-width: 50em;
 }
